Regression: Geometry Nodes instance object display mode error #119364

Closed
opened 2024-03-12 07:34:45 +01:00 by RedHaloStudio · 5 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.61

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-10 18:36, hash: 703353b5dafc
Worked: (newest version of Blender that worked as expected)

Short description of error
Geometry Nodes instance object display mode error

Exact steps for others to reproduce the error

  1. Create Monkey object
  2. The Monkey object display as Bounds in object property panel
  3. Create any object and add Geometry Nodes modifier
  4. add Instance on ponit and assign Monkey for instance
  5. all instance display as Textured in 3D Viewport
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.61 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-10 18:36, hash: `703353b5dafc` Worked: (newest version of Blender that worked as expected) **Short description of error** Geometry Nodes instance object display mode error **Exact steps for others to reproduce the error** 1. Create `Monkey` object 2. The `Monkey` object display as `Bounds` in object property panel 3. Create any object and add `Geometry Nodes` modifier 4. add `Instance on ponit` and assign `Monkey` for instance 5. all instance display as `Textured` in 3D Viewport
RedHaloStudio added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2024-03-12 07:34:45 +01:00

Thanks for report. Geometry Nodes is nodes of geometry, not sure if this is expected to have bounding boxes or wire mesh instead of actual geometry.

Thanks for report. Geometry Nodes is nodes of geometry, not sure if this is expected to have bounding boxes or wire mesh instead of actual geometry.
Iliya Katushenock added the
Interest
Geometry Nodes
Interest
Nodes & Physics
labels 2024-03-12 09:51:05 +01:00

Thanks for the report, but the issue reported here is a request for modified/improved behavior and not a bug in current behavior. Closing as this bug tracker is only for bugs and errors.

For user requests and feedback, please use other channels: https://developer.blender.org/docs/handbook/communication/user_feedback/

For more information on why this isn't considered a bug, visit: https://developer.blender.org/docs/handbook/bug_reports/not_a_bug/

Thanks for the report, but the issue reported here is a request for modified/improved behavior and not a bug in current behavior. Closing as this bug tracker is only for bugs and errors. For user requests and feedback, please use other channels: https://developer.blender.org/docs/handbook/communication/user_feedback/ For more information on why this isn't considered a bug, visit: https://developer.blender.org/docs/handbook/bug_reports/not_a_bug/
Blender Bot added
Status
Archived
and removed
Status
Needs Triage
labels 2024-03-12 09:54:48 +01:00
Author

same file
2024-02-29 daily version and 4.0.1 release version

same file 2024-02-29 daily version and 4.0.1 release version
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2024-03-12 09:58:10 +01:00

I can not confirm regression.

I can not confirm regression.
Author

3.6 version
Try opening it with the latest daily version.

OK:
Date: 2024-03-09 22:42 Hash:5b522359ee47 Branch:main

ERROR:
Date:2024-03-10 18:36 Hash:703353b5dafc Branch:main

3.6 version Try opening it with the latest daily version. OK: Date: 2024-03-09 22:42 Hash:`5b522359ee47` Branch:main ERROR: Date:2024-03-10 18:36 Hash:`703353b5dafc` Branch:main
133 KiB
Iliya Katushenock changed title from Geometry Nodes instance object display mode error to Regression: Geometry Nodes instance object display mode error 2024-03-12 11:39:56 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-12 14:10:33 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119364
No description provided.